# hgit

./: .gitignore  ChangeLog.md  LICENSE  README.md  Rubric.md  hgit.cabal  hie.yaml  stack.yaml
app/: Main.hs
src/: AddTests.hs  Branch.hs  BranchTests.hs  Command.hs  CommandHandler.hs  CommandParser.hs  Commit.hs  CommitTests.hs  FileIO.hs  GenericParser.hs  Hash.hs  HashTests.hs  Head.hs  Index.hs  InitTests.hs  Lib.hs  LogTests.hs  ParserTests.hs  Refs.hs  Status.hs  StatusTests.hs  SwitchTests.hs  TestUtils.hs  UtilTests.hs  Utils.hs
test/: Add.hs  Commit.hs  Hash.hs  Init.hs  Parser.hs  Spec.hs
test-repo/test-repo/.hgit/: index
test-repo/test-repo/.hgit/refs/heads/: main
test-repo/test-repo/test-repo/: file4.txt
test-repo/test-repo/test-repo/.hgit/: index
test-repo/test-repo/test-repo/.hgit/refs/heads/: main
test-repo/test-repo/test-repo/test-repo/: file3.txt
test-repo/test-repo/test-repo/test-repo/.hgit/: index
test-repo/test-repo/test-repo/test-repo/.hgit/refs/heads/: main
