cabal-version:  2.2
name:           hgit
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/sidsann/hgit#readme>
homepage:       https://github.com/sidsann/hgit#readme
bug-reports:    https://github.com/sidsann/hgit/issues
author:         Sid Sannapareddy, Grant Wells
maintainer:     sannapareddysiddharth@gmail.com, gawells@seas.upenn.edu
copyright:      2024 Sid Sannapareddy, Grant Wells
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/sidsann/hgit

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
    , doctest
    , transformers >0.6.0.5
    , text >= 2.1.2
    , bytestring
    , zlib
    , cryptohash-sha1
    , diff3
    , time
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      Branch
      CommandParser
      CommandHandler
      Commit
      FileIO
      Hash
      Index
      -- if you add modules to your project, list them here
      -- so that they will be available to the executable and test suite
  hs-source-dirs:
      src

executable hgit-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hgit


test-suite hgit-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hgit

